fixed z-index issue of info-panel and title-panel

--- a/styles/main.css
+++ b/styles/main.css
@@ -96,8 +96,13 @@ body {
   margin : auto 0 auto 0;
 }
 
+#title-panel {
+  z-index : 0;
+}
+
 #info-panel {
-  width : 25vw;
+  z-index : 0;
+  width   : 25vw;
 }
 
 #time-input::-webkit-slider-runnable-track,
